@@ -1,13 +1,11 @@
 package com.nhnacademy.hello.controller.admin;
 
-import com.nhnacademy.hello.common.feignclient.BookAdapter;
-import com.nhnacademy.hello.common.feignclient.MemberAdapter;
-import com.nhnacademy.hello.common.feignclient.OrderAdapter;
-import com.nhnacademy.hello.common.feignclient.OrderStatusAdapter;
+import com.nhnacademy.hello.common.feignclient.*;
 import com.nhnacademy.hello.common.util.AuthInfoUtils;
 import com.nhnacademy.hello.dto.book.AuthorDTO;
 import com.nhnacademy.hello.dto.book.BookDTO;
 import com.nhnacademy.hello.dto.member.MemberDTO;
+import com.nhnacademy.hello.dto.order.OrderBookResponseDTO;
 import com.nhnacademy.hello.dto.order.OrderDTO;
 import com.nhnacademy.hello.dto.order.OrderStatusDTO;
 import lombok.RequiredArgsConstructor;
@@ -17,9 +15,11 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -27,7 +27,7 @@ public class AdminPageController {
     private final MemberAdapter memberAdapter;
     private final BookAdapter bookAdapter;
     private final OrderAdapter orderAdapter;
-    private final OrderStatusAdapter orderStatusAdapter;
+    private final OrderBookAdapter orderBookAdapter;
 
     @GetMapping("/admin")
     public String adminPage(@RequestParam(defaultValue = "1") int page,
@@ -60,21 +60,53 @@ public class AdminPageController {
         model.addAttribute("bookAuthorsMap", bookAuthorsMap);
         model.addAttribute("bookLikesMap", bookLikesMap);
 
-
-        // WAIT 상태 주문만 가져오기
+        // WAIT 상태 주문 가져오기
         ResponseEntity<List<OrderDTO>> response = orderAdapter.getAllOrders(page - 1);
         List<OrderDTO> allOrders = response.getBody();
 
         if (allOrders != null && !allOrders.isEmpty()) {
             List<OrderDTO> pendingOrders = allOrders.stream()
                     .filter(order -> "WAIT".equalsIgnoreCase(order.orderStatus().orderStatus()))
-                    .toList();
+                    .collect(Collectors.toList());
+
+            // 각 주문에 도서 정보를 추가
+            pendingOrders = pendingOrders.stream()
+                    .map(order -> {
+                        // OrderBookAdapter로 해당 주문의 도서 정보 가져오기
+                        OrderBookResponseDTO[] orderBooks = orderBookAdapter.getOrderBooksByOrderId(order.orderId());
+                        if (orderBooks != null && orderBooks.length > 0) {
+                            // 도서 ID 목록 추출
+                            List<Long> bookIds = Arrays.stream(orderBooks)
+                                    .map(OrderBookResponseDTO::bookId)
+                                    .collect(Collectors.toList());
+
+                            // BookAdapter로 도서 정보 조회
+                            List<BookDTO> books = bookAdapter.getBooksByIds(bookIds);
+
+                            // 새로운 OrderDTO 생성 (기존 OrderDTO는 불변이므로)
+                            return new OrderDTO(
+                                    order.orderId(),
+                                    order.orderPrice(),
+                                    order.orderedAt(),
+                                    order.wrappingPaper(),
+                                    order.orderStatus(),
+                                    order.zoneCode(),
+                                    order.address(),
+                                    order.addressDetail(),
+                                    order.member(),
+                                    books // 도서 정보 추가
+                            );
+                        }
+                        return order; // 도서 정보가 없으면 원래 OrderDTO 반환
+                    })
+                    .collect(Collectors.toList());
 
             model.addAttribute("orders", pendingOrders);
         } else {
             model.addAttribute("orders", List.of());
         }
 
+        // 페이지네이션 정보 추가
         ResponseEntity<Long> totalOrderCountResponse = orderAdapter.getTotalOrderCount();
         Long totalOrders = totalOrderCountResponse.getBody();
         int totalPages = (totalOrders == null) ? 0 : (int) Math.ceil((double) totalOrders / pageSize);
